# data-quality-monitoring-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: dashboard.py
config/: thresholds.yml
docs/: analyst_playbook.md  architecture.md
grafana/provisioning/dashboards/: dashboards.yml  data-quality-overview.json
grafana/provisioning/datasources/: postgres.yml
scripts/: run_pipeline.py
sql/: 001_schema.sql  002_views.sql  003_seed_sources.sql
src/dq_monitoring/: __init__.py  config.py  db.py  generator.py  incidents.py  metrics.py  pipeline.py  validation.py
tests/: test_config.py  test_incidents.py  test_metrics.py  test_pipeline.py
